--- a/토비의 스프링 3.1/08_스프링이란 무엇인가?.md
+++ b/토비의 스프링 3.1/08_스프링이란 무엇인가?.md
@@ -16,7 +16,46 @@
   * 스프링 개발자는 오픈소스의 문제점과 한계를 파악하고 지속적인 신뢰를 줄 수 있도록 개발을 책임지고 진행할 수 있는 전문 기업을 만들었다. 덕분에 안정적고 전문화된 개발과 품질관리가 가능했다.
 
 ## 🌱8.2 스프링의 목적
+### 💡 엔터프라이즈 개발의 복잡함
+자바 엔터프라이즈 개발이 실패하는 이유에 대해 많은 논의가 있었는데, 그 중 가장 대표적인 게 '엔터프라이즈 시스템 개발이 너무 복잡해져서'였다.
+* **복잡함의 근본적인 이유**
+  * 첫 번째는 기술적인 제약조건과 요구사항이 늘어가기 때문이다.
+  * 두 번째는 엔터프라이즈 애플리케이션이 구현해야 할 핵심기능인 비즈니스 로직의 복잡함이 증가하기 때문이다.
+* **복잡함을 가중시키는 원인**
+  * 자바 엔터프라이즈 시스템 개발이 어려운 가장 큰 이유는 근본적인 비즈니스 로직과 엔터프라이즈 기술이라는 두 가지 복잡함이 한데 얽혀 있기 때문이다.
+  * 더 큰 문제는 기술과 비즈니스 로직의 복잡함에 엉켜 있는 코드를 유지보수하는 일이다. 만약 적용한 기술을 변경해야 한다면? 또는 특정 로직을 수정해야 한다면? 하나의 수정 요구를 적용하기 위해 복잡하게 얽혀 있는 코드를 헤매다 보면 정작 수정할 대상이 아닌 부분에까지 영향을 줘서 새로운 버그를 만들 수도 있다.
 
+### 💡 복잡함을 해결하려는 도전
+* **제거될 수 없는 근본적인 복잡함**
+  * 근본적으로 엔터프라이즈 개발에 나타나는 복잡함의 원인은 제거 대상이 아니다. 대신 그 복잡함을 효과적으로 상대할 수 있는 전략과 기법이 필요하다.
+  * 문제는 비즈니스 로직의 복잡함을 효과적으로 다루기 위한 방법과 기술적인 복잡함을 효과적으로 처리하는 데 적용되는 방법이 다르다는 점이다. 따라서 두 가지 복잡함이 코드에 한데 어우러져 나타나는 전통적인 개발 방식에서는 효과적으로 복잡함을 다루기가 힘들다.
+  * 따라서 가장 먼저 할 일은 성격이 다른 이 두가지 복잡함을 분리해내는 것이다.
+* **실패한 해결책: EJB**
+  * EJB의 기본 전략도 이 두 가지 종류의 복잡함을 분리하는 것이었다. 개발자가 로우레벨의 기술적인 복잡함에 신경쓰지 않고 비즈니스 로직을 효과적으로 개발하는 데 더 집중할 수 있게 하자는 목표가 있었다. 하지만 실패했다.
+  * 애플리케이션 로직을 담은 핵심 코드에서 일부 기술적인 코드가 제거된 건 사실이지만, 오히려 EJB라는 환경과 스펙에 종속되는 코드로 만들어져야 하는 더 큰 부담을 안게 됐다.
+* **비침투적인 방식을 통한 효과적인 해결책: 스프링**
+  * EJB처럼 어떤 기술을 적용했을 때 그 기술과 관련된 코드나 규악 등이 코드에 등장하는 경우를 `침투적인 기술`이라고 한다.
+  * 반면에 `비침투적인 기술`은 기술의 적용 사실이 코드에 직접 반영되지 않는다는 특징이 있다.
+  * 스프링이 성공할 수 있었던 비결은 비침투적인 기술이라는 전략을 택했기 때문이다. 스프링을 이용하면 기술적인 복잡함과 비즈니스 로직을 다루는 코드를 깔끔하게 분리할 수 있다. 꼭 필요할 것 같은 경우조차도 기술 코드가 직접 노출되지 않도록 만들어줬다.
+
+### 💡 복잡함을 상대하는 스프링의 전략
+스프링의 기본적인 전략은 비즈니스 로직을 담은 애플리케이션 코드와 엔터프라이즈 기술을 처리하는 코드를 분리시키는 것이다.
+* **기술적 복잡함을 상대하는 전략**
+  * 첫 번째 문제: 기술에 대한 접근 방식이 일관성이 없고, 특정 환경에 종속적이다.
+    * 일관성 없는 기술과 서버 환경의 변화에 대한 스프링의 공략 방법은 바로 서비스 추상화다. 기술적인 복잡함은 일단 추상화를 통해 로우레벨의 기술 구현 부분과 기술을 사용하는 인터페이스를 분리하고, 환경과 세부 기술에 독립적인 접근 인터페이스를 제공하는 것이 가장 좋은 해결책이다.
+  * 두 번째 문제: 기술적인 처리를 담당하는 코드가 성격이 다른코드에 섞여서 등장한다.
+    * 책임에 따라 계층을 구분하고 그 사이에 서로의 기술과 특성에 의존적인 인터페이스나 예외처리 등을 최대한 제거한다고 할지라도 근본적으로 엔터프라이즈 서비스를 적용하는 한 이런 문제는 쉽게 해결할 수 없다.
+    * 이런 기술과 비즈니스 로직의 혼재로 발생하는 복잡함을 해결하기 위한 스프링의 접근 방법은 바로 `AOP`다.
+    * AOP는 기술을 다루는 코드로 인한 복잡함이 기술 그 자체 이상으로 불필요하게 증대되지 않도록 도와주는 가장 강력한 수단이다.
+* **비즈니스와 애플리케이션 로직의 복잡함을 상대하는 전략**
+  * 비즈니스 로직은 가장 중요하게 다뤄져야 하고 가장 많이 신경 써야 한다. 예전에는 비즈니스 로직의 상당 부분을 DB에 두는 것이 유행이었지만 엔터프라이즈 시스템의 규모가 커지고, 복잡함이 증가하면서 DB에 비즈니스 로직을 두는 건 불편하고 위험한 일이라고 여겨지기 시작했다.
+  * 따라서 엔터프라이즈 시스템 개발의 흐름은 점차로 비즈니스 로직은 애플리케이션 안에서 처리하도록 만드는 추세다. DB는 단지 데이터의 영구적인 저장에 활용하고 데이터 분석과 가공 그리고 그에 따라 로직을 처리하는 부분은 확장하기도 쉽고 비용도 싼 애플리케이션 서버 쪽으로 이동하는 것이다.
+  * 비즈니스 로직의 복잡함을 상대하는 전략은 자바라는 객체지향 기술 그 자체다. 스프링은 단지 객체지향 언어의 장점을 제대로 살리지 못하게 방해했던 요소를 제거하도록 도와줄 뿐이다.
+* **핵심 도구: 객체지향과 DI**
+  * 기술적인 복잡함을 효과적으로 다루게 해주는 기법은 모두 DI를 바탕으로 하고 있다. 서비스 추상화, 템플릿/콜백, AOP와 같은 스프링의 기술은 DI 없이는 존재할 수 없는 것들이다.
+  * DI는 객체지향 설계 기술 없이는 그 존재의미가 없다. DI란 특별한 기술이라기보다는 유연하게 확장할 수 있는 오브젝트 설계를 하다 보면 자연스럽게 적용하게 되는 객체지향 프로그래밍 기법일 뿐이다. 스프링은 단지 그것을 더욱 편하고 쉽게 사용하도록 도와줄 뿐이다.
+  * 결국 모든 스프링의 기술과 전략은 객체지향이라는 자바 언어가 가진 강력한 도구를 극대화해서 사용할 수 있도록 돕는 것이라고 볼 수 있다. 스프링은 단지 거들 뿐이다.
+  
 ## 🌱8.3 POJO 프로그래밍
 
 ## 🌱8.4 스프링의 기술
