--- a/토비의 스프링 3.1/08_스프링이란 무엇인가?.md
+++ b/토비의 스프링 3.1/08_스프링이란 무엇인가?.md
@@ -57,7 +57,58 @@
   * 결국 모든 스프링의 기술과 전략은 객체지향이라는 자바 언어가 가진 강력한 도구를 극대화해서 사용할 수 있도록 돕는 것이라고 볼 수 있다. 스프링은 단지 거들 뿐이다.
   
 ## 🌱8.3 POJO 프로그래밍
+### 💡 스프링의 핵심: POJO
+스프링의 주요 기술인 IoC/DI, AOP와 PSA는 애플리케이션을 POJO로 개발할 수 있게 해주는 가능기술이라고 불린다.
+### 💡 POJO란 무엇인가?
+* POJO는 Plain Old Java Object의 첫 글자를 따서 만든 약자다.
+### 💡 POJO의 조건
+그렇다면 POJO 프로그래밍이란 무엇인가? 그저 EJB를 사용하지 않으면 POJO일까? 특정 프레임워크의 클래스를 상속하지 않으면 POJO일까? 명확하게 하자면 적어도 다음의 세 가지 조건을 충족해야 POJO라고 불릴 수 있다.
+* **특정 규약에 종속되지 않는다.**
+  * POJO는 자바 언어와 꼭 필요한 API 외에는 종속되지 않아야 한다. 따라서 EJB2와 같이 특정 규약을 따라 비즈니스 컴포넌트를 만들어야 하는 경우는 POJO가 아니다.
+  * 특정 규약을 따라 만들게 하는 경우는 대부분 규약에서 제시하는 특정 클래스를 상속하도록 요구한다. 그럴 경우 자바의 단일 상속 제한 때문에 더 이상 해당 클래스에 객체지향적인 설계 기법을 적용하기가 어려워진다는 문제가 생긴다. 또한 규약이 적용된 환경에 종속적이 되기 때문에 다른 환경으로 이전이 힘들다는 문제점이 있다.
+  * 별다른 가치를 주지도 못하는 규약 따위에 종속되지 않아야 하고, 객체지향 설계의 자유로운 적용이 가능한 오브젝트여야만 POJO라고 불릴 수 있다.
+* **특정 환경에 종속되지 않는다.**
+  * JNDI와 같은 특정 환경이 의존 대상 검색 방식에 종속적이라면 POJO라고 할 수 없다.
+  * 또 환경에 종속적인 클래스나 API를 직접 쓴 경우처럼 순수한 애플리케이션 로직을 담고 있는 오브젝트 코드가 특정 환경에 종속되게 만드는 경우라면 POJO라고 할 수 없다. POJO는 환경에 독립적이어야한다.
+  * 그럼 특정 기술규약과 환경에 종속되지 않으면 모두 POJO라고 말할 수 있는가? 단지 자바의 문법을 지키고, 순순하게 JavaSE API만을 사용했다고 해서 그 코드를 POJO라고 할 수 없다. **POJO는 객체지향적인 자바 언어의 충실하게 만들어져야 하기 때문이다.**
+  * 자바는 객체지향 프로그래밍을 가능하게 해주는 언어이지만, 자바 언어 문법을 사용했다고 해서 자동으로 객체지향 프로그래밍과 객체지향 설계가 적용됐다고 볼 수는 없다.
+  * 진정한 POJO란 객체지향적인 원리에 충실하면서, 환경과 기술에 종속되지 않고 필요에 따라 재활용될 수 있는 방식으로 설계된 오브젝트를 말한다. 그럼 POJO에 애플리케이션의 핵심 로직과 기능을 담아 설계하고 개발하는 방법을 POJO 프로그래밍이라고 할 수 있다.
+### 💡 POJO의 장점
+* 특정한 기술과 환경에 종속되지 않는 오브젝트는 그만큼 깔끔한 코드가 될 수 있다.
+* POJO로 개발된 코드는 자동화된 테스트에 매우 유리하다. 환경의 제약은 코드의 자동화된 테스트를 어렵게 한다.
+* 객체지향적인 설계를 자유롭게 적용할 수 있다는 것도 큰 장점이다.
+### 💡 POJO 프레임워크
+* 스프링은 비즈니스 로직의 복잡함과 엔터프라이즈 기술의 복잡함을 분리해서 구성할 수 있게 도와준다. 하지만 자신은 기술영역에만 관여하지 비즈니스 로직을 담당하는 POJO에서는 모습을 감춘다. POJO 프레임워크로서 스프링은 자신을 직접 노출하지 않으면서 애플리케이션을 POJO로 쉽게 개발할 수 있게 지원해준다.
 
 ## 🌱8.4 스프링의 기술
+스프링에는 POJO 프로그래밍을 손쉽게 할 수 있도록 지원하는 세 가지 가능기술을 제공한다.
+### 💡 제어의 역전(IoC) / 의존관계 주입(DI)
+왜 두 개의 오브젝트를 분리해서 만들고, 인터페이스를 두고 느슨하게 연결한 뒤, 실제 사용할 대상은 DI를 통해 외부에서 지정하는 것일까? `유연한 확장이 가능하게 하기 위해서`다.
+* DI의 활용방법
+  * 핵심기능의 변경
+  * 핵심기능의 동적인 변경
+  * 부가기능의 추가
+  * 인터페이스의 변경
+  * 프록시
+  * 템플릿과 콜백
+  * 싱글톤과 오브젝트 스코프
+  * 테스트
+### 💡 애스펙트 지향 프로그래밍(AOP)
+IoC/DI를 이용해서 POJO에 선언적인 엔터프라이즈 서비스를 제공할 수 있었지만 일부 서비스는 순수한 객체지향 기법만으로는 POJO의 조건을 유지한 채로 적용하기 힘들다. 바로 이런 문제를 해결하기 위해 AOP가 필요하다. 스프링의 AOP는 스프링이 POJO 프로그래밍을 지원하려는 그 핵심 목적을 위해 중요한 역할을 하고 있다.
+* AOP의 적용 기법
+  * 첫 번째는 스프링과 같이 다이내믹 프록시를 사용하는 방법이다.
+  * 두 번째는 자바 언어의 한계를 넘어서는 언어의 확장을 이용하는 방법이다.
+* AOP의 적용 단계
+  * AOP 적용 1단계: 미리 준비된 AOP 이용
+  * AOP 적용 2단계: 전담팀을 통한 정책 AOP 적용
+  * AOP 적용 3단계: AOP의 자유로운 이용
+### 💡 포터블 서비스 추상화(PSA)
+서비스 추상화를 위해 필요한 기술은 DI뿐이다. 결국 DI 응용 방법의 한 가지 이므로 DI를 적극 활용해서 개발한다면 서비스 추상화는 자연스럽게 만들어 쓸 수 있다.
 
 ## 🌱8.5 정리
+* 스프링은 개발철학과 목표를 분명히 이해하고 사용해야 한다.
+* 스프링은 오픈소스 소프트웨어이며, 애플리케이션 개발의 모든 기술과 영역을 종합적으로 다루는 애플리케이션 프레임워크다.
+* 엔터프라이즈 애플리케이션 개발의 복잡함은 비즈니스 로직과 엔터프라이즈 시스템의 기술적인 요구에 의해 발생한다. 기존의 접근 방법은 이 복잡도를 낮추지 못하며 자바의 객체지향적인 장점을 포기해야 한다는 문제점이 있다.
+* 자바의 근본인 객체지향적인 원리에 충실하게 개발할 수 있으며, 환경과 규약에 의존적이지 않은 POJO를 이용한 애플리케이션 개발은 엔터프라이즈 시스템 개발의 복잡함이 주는 많은 문제를 해결할 수 있다.
+* 스프링의 목적은 이런 POJO를 이용해 엔터프라이즈 애플리케이션을 쉽고 효과적으로 개발할 수 있도록 지원해주는 데 있다.
+* POJO 방식의 개발을 돕기 위해 스프링은 IoC/DI, AOP, PSA와 같은 가능기술을 프레임워크와 컨테이너라는 방식을 통해 제공한다.
