--- a/Real MySQL(1)/04_아키텍처.md
+++ b/Real MySQL(1)/04_아키텍처.md
@@ -69,9 +69,19 @@ InnoDB는 MySQL에서 사용할 수 있는 스토리지 엔진 중 거의 유일
   * 외래키 지원은 MyISAM이나 MEMORY 테이블에서는 사용할 수 없다.
 * **MVCC(Multi Version Concurrency Control)**
   * MVCC는 하나의 레코드에 대해 여러 개의 버전을 동시에 관리하는 기술로, 가장 큰 목적은 `잠금을 사용하지 않는 일관된 읽기를 제공`하는 데 있다.
+  * InnoDB는 `언두 로그`를 이용해 MVCC를 구현했다.
+  * **"아직 COMMIT이나 ROLLBACK이 되지 않은 상태에서 다른 사용자가** `SELECT * FROM member WHERE m_id=12;`**와 같이 작업 중인 레코드를 조회하면 어디에 있는 데이터를 조회할까?"** 트랜잭션 격리 수준이 READ_COMMITTED나 그 이상의 격리 수준인 경우, InnoDB 버퍼 풀이나 데이터 파일에 있는 내용 대신 변경되기 이전의 내용을 보관하고 있는 `언두 영역의 데이터를 반환`한다.
+  * 하나의 레코드(회원 번호가 12인 레코드)에 대해 2개의 버전이 유지되고, 필요에 따라 어느 데이터가 보여지는지 여러 가지 상황에 따라 달라지는 구조다.
+  * 커밋이 된다고 언두 영역의 백업 데이터가 항상 바로 삭제되는 것은 아니다. 언두 영역을 필요로 하는 트랜잭션이 더는 없을 때 비로소 삭제된다.
 * **잠금 없는 일관된 읽기(Non-Locking Consistent Read)**
+  * InnoDB 스토리지 엔진은 MVCC 기술을 이용해 잠금을 걸지 않고 읽기 작업을 수행한다. 잠금을 걸지 않기 때문에 InnoDB에서 읽기 작업은 다른 트랜잭션이 가지고 있는 잠금을 기다리지 않고, 읽기 작업이 가능하다.
 * **자동 데드락 감지**
+  * InnoDB 스토리지 엔진은 데드락 감지 스레드를 갖고 있어 해당 스레드가 주기적으로 잠금 대기 그래프를 검사해 교착 상태에 빠진 트랜잭션들을 찾아서 그중 하나를 강제 종료한다.
+  * 이 때 어느 트랜잭션을 먼저 강제 종료할 것인지를 판단하는 기준은 트랜잭션의 언두 로그 양이며, **언두 로그 레코드를 더 적게 가진 트랜잭션이 일반적으로 롤백의 대상이 된다.**
+  * 트랜잭션이 언두 레코드를 적게 가졌다는 이야기는 롤백을 해도 언두 처리를 해야 할 내용이 적다는 것이며, 트랜잭션 강제 롤백으로 인한 MySQL 서버의 부하도 덜 유발하기 때문이다.
 * **자동화된 장애 복구**
+  * InnoDB에는 손실이나 장애로부터 데이터를 보호하기 위한 여러 가지 메커니즘이 탑재돼 있다. 메커니즘을 이용해 **MySQL 서버가 시작될 때 완료되지 못한 트랜잭션이나 디스크에 일부만 기록된 데이터 페이지 등에 대한 일련의 복구 작업이 자동으로 진행**된다.
+  * InnoDB의 복구를 위한 `innodb_force_recovery` 옵션(1, 2, 3, 4, 5, 6)이 제공된다.
 * **InnoDB 버퍼 풀**  
 버퍼 풀은 디스크의 데이터 파일이나 인덱스 정보를 메모리에 캐시해 두는 공간이다.
   * 💠버퍼 풀의 크기 설정
@@ -85,11 +95,26 @@ InnoDB는 MySQL에서 사용할 수 있는 스토리지 엔진 중 거의 유일
       * `플러시 리스트`: 동기화되지 않은 데이터를 가진 데이터 페이지(더티 페이지)의 변경 시점 기준의 페이지 목록을 관리
       * `프리 리스트`: InnoDB 버퍼 풀에서 실제 사용자 데이터로 채워지지 않은 비어 있는 페이지들의 목록
   * 💠버퍼 풀과 리두 로그
+    * InnoDB 버퍼 풀은 데이터베이스 서버의 성능 향상을 위해 `데이터 캐시`와 `쓰기 버퍼링`의 두 가지 용도가 있는데, 버퍼 풀의 메모리 공간만 단순히 늘리는 것은 데이터 캐시 기능만 향상시키는 것이다. 쓰기 버퍼링 기능까지 향상시키려면 버퍼 풀과 리두 로그와의 관계를 먼저 이해해야 한다.
+    * ✏️ `클린 페이지`: 디스크에서 읽은 상태로 전혀 변경되지 않은 페이지
+    * ✏️ `더티 페이지`: INSERT, UPDATE, DELETE 명령으로 변경된 데이터를 가진 페이지
+    * ✏️ `활성 리두 로그 공간`: 전체 리두 로그 파일에서 배사용 불가능한 공간
+    * ✏️ `LSN(Log Sequence Number)`: 리두 로그 파일의 공간은 계속 순환되어 재사용되는데, 기록될 때마다 증가하는 로그 포지션 값
   * 💠버퍼 풀 플러시
+  InnoDB 스토리지 엔진은 버퍼 풀에서 아직 디스크로 기록되지 않은 더티 페이지들을 성능상의 악영향 없이 디스크에 동기화하기 위해 2개의 플러시 기능을 백그라운드로 실행한다.
     * 플러시 리스트 플러시
+      * InnoDB 스토리지 엔진은 리두 로그 공간의 재활용을 위해 주기적으로 오래된 리두 로그 엔트리가 사용하는 공간을 비워야 한다. 이 때 오래된 리두 로그 공간이 지워지려면 반드시 InnoDB 버퍼풀의 더티 페이지가 먼저 디스크로 동기화돼야 한다.
+      * 이를 위해 InnoDB 스토리지 엔진은 주기적으로 플러시 리스트(Flush_list) 플러시 함수를 호출해서 플러시 리스트에서 오래전에 변경된 데이터 페이지 순서대로 디스크에 동기화하는 작업을 수행한다.
+      * 이 때 언제부터 얼마나 많은 더티 페이지를 한 번에 디스크로 기록하느냐에 따라 사용자의 쿼리 처리가 악영향을 받지 않으면서 부드럽게 처리된다.
+      * 이를 위한 InnoDB 스토리지 엔진에서 제공하는 시스템 변수 - `innodb_page_cleaners`, `innodb_max_dirty_pages_pct_lwm`, `innodb_max_dirty_pages_pct`, `innodb_io_capacity`, `innodb_io_capacity_max`, `innodb_flush_neighbors`, `innodb_adaptive_flushing`, `innodb_adaptive_flushing_lwm`
     * LRU 리스트 플러시
+      * LRU 리스트에서 사용 빈도가 낮은 데이터 페이지들을 제거해서 새로운 페이지들을 읽어올 공간을 만들어야 하기 때문에 LRU 리스트(LRU_list) 플러시 함수가 사용된다.
   * 💠버퍼 풀 상태 백업 및 복구
+    * ✏️ `워밍업(Warming Up)`: 디스크의 데이터가 버퍼 풀에 적재돼 있는 상태
+    * 버퍼 풀이 잘 워밍업된 상태에서는 그렇지 않은 경우보다 몇십 배의 쿼리 처리 속도를 보이는 것이 일반적이다. 하지만 MySQL 5.6 버전부터는 **버퍼 풀 덤프 및 적재 기능이 도입**됐다.
+    * InnoDB 스토리지 엔진은 MySQL 서버가 셧다운 되기 직전에 버퍼 풀의 백업을 실행하고, MySQL 서버가 시작되면 자동으로 백업된 버퍼 풀의 상태를 복구할 수 있는 기능을 제공한다.
   * 💠버퍼 풀의 적재 내용 확인
+    * MySQL 8.0 버전부터 information_schema 데이터베이스에 innodb_cached_indexes 테이블이 추가되어 테이블의 인덱스별로 데이터 페이지가 얼마나 InnoDB 버퍼 풀에 적재돼 있는지 확인할 수 있다.
 * **Double Write Buffer**
 * **언두 로그**
   * 언두 로드 레코드 모니터링
