--- a/단위 테스트/06_단위 테스트 스타일.md
+++ b/단위 테스트/06_단위 테스트 스타일.md
@@ -1,12 +1,46 @@
 ## ✅ 6.1 단위 테스트의 세 가지 스타일
 * **출력 기반 테스트 정의**
+  * 테스트 대상 시스템(SUT)에 입력을 넣고 생성되는 출력을 점검하는 방식이다. 이러한 단위 테스트 스타일은 전역 상태나 내부 상태를 변경하지 않는 코드에만 적용되므로 반환 값만 검증하면 된다.
+  * 출력 기반 단위 테스트 스타일은 함수형(functional)이라고도 한다.
+  * 이 이름은 사이드 이펙트 없는 코드 선호를 강조하는 프로그래밍 방식인 함수형 프로그래밍에 뿌리를 두고 있다. 
 * **상태 기반 스타일 정의**
+  * 상태 기반 스타일은 작업이 완료된 후 시스템 상태를 확인하는 것이다.
+  * 이 테스트 스타일에서 상태라는 용어는 SUT나 협력자 중 하나, 또는 데이터베이스나 파일 시스템 등과 같은 프로세스 외부 의존성의 상태 등을 의미할 수 있다.
 * **통신 기반 스타일 정의**
+  * 이 스타일은 목을 사용해 테스트 대상 시스템과 협력자 간의 통신을 검증한다.
+  * 통신 기반 테스트는 SUT의 협력자를 목으로 대체하고 SUT가 협력자를 올바르게 호출하는지 검증한다.
+* 단위 테스트의 고전파는 통신 기반 스타일보다 상태 기반 스타일을 선호한다. 런던파는 이와 반대로 선택한다. 두 분파는 출력 기반 테스트를 사용한다. 
 
 ## ✅ 6.2 단위 테스트 스타일 비교
 * **회귀 방지와 피드백 속도 지표로 스타일 비교하기**
+  * 회귀 방지 지표는 특정 스타일에 따라 달라지지 않는다. 회귀 방지 지표는 다음 세 가지 특성으로 결정된다.
+    * 테스트 중에 실행되는 코드의 양
+    * 코드 복잡도
+    * 도메인 유의성
+  * 테스트가 프로세스 외부 의존성과 떨어져 단위 테스트 영역에 있는 한, 모든 스타일은 테스트 실행 속도가 거의 동일하다.
+  * 목은 런타임에 지연 시간이 생기는 편이므로 통신 기반 테스트가 약간 나쁠 수 있다. 그러나 이러한 테스트가 수만 개 수준이 아니라면 별로 차이는 없다.
 * **리팩터링 내성 지표로 스타일 비교하기**
+  * 리팩터링 내성은 리팩터링 중에 발생하는 거짓 양성(허위 경보) 수에 대한 척도다. 결국 거짓 양성은 식별할 수 있는 동작이 아니라 코드의 구현 세부 사항에 결합된 테스트의 결과다.
+  * 출력 기반 테스트는 테스트가 테스트 대상 메서드에만 결합되므로 거짓 양성 방지가 가장 우수하다.
+  * 상태 기반 테스트는 일반적으로 거짓 양성이 되기 쉽다. 확률적으로 말하면, 테스트와 제품 코드 간의 결합도가 클수록 유출되는 구현 세부 사항에 테스트가 얽매일 가능성이 커진다.
+  * 통신 기반 테스트가 허위 경보에 가장 취약하다. 그러나 피상적인 테스트가 통신 기반 테스트의 결정적인 특징이 아닌 것처럼, 불안정성도 통신 기반 테스트의 결정적인 특징이 아니다. 캡슐화를 잘 지키고 테스트를 식별할 수 있는 동작에만 결합하면 거짓 양성을 최소로 줄일 수 있다.
 * **유지 보수성 지표로 스타일 비교하기**
+  * 유지 보수성은 단위 테스트의 유지비를 측정하며, 다음 두 가지 특성으로 정의한다.
+    * 테스트를 이해하기 얼마나 어려운가(테스트 크기에 대한 함수)?
+    * 테스트를 실행하기 얼마나 어려운가(테스트에 직접적으로 관련 있는 프로세스 외부 의존성 개수에 대한 함수)?
+  * **출력 기반 테스트의 유지보수성**
+    * 출력 기반 테스트는 거의 항상 짧고 간결하므로 유지 보수가 쉽다. 이러한 이점은 메서드로 입력을 공급하는 것과 해당 출력을 검증하는 두 가지로 요약할 수 있다는 사실에서 비롯된다.
+    * 출력 기반 테스트의 기반 코드는 전역 상태나 내부 상태를 변경할 리 없으므로, 프로세스 외부 의존성을 다루지 않는다. 따라서 두 가지 유지 보수성 모두의 측면에서 출력 기반 테스트가 가장 좋다.
+  * **상태 기반 테스트의 유지보수성**
+    * 상태 기반 테스트는 일반적으로 출력 기반 테스트보다 유지 보수가 쉽지 않다. 상태 검증은 종종 출력 검증보다 더 많은 공간을 차지하기 때문이다.
+  * **통신 기반 테스트의 유지보수성**
+    * 통신 기반 테스트에는 테스트 대역과 상호 작용 검증을 설정해야 하며, 이는 공간을 많이 차지한다.
+    * 목이 사슬 형태로 있을 때 테스트는 더 커지고 유지 보수하기가 어려워진다.
+* **스타일 비교하기: 결론**
+  * | |출력 기반|상태 기반|통신 기반|
+    |------|---|---|---|
+    |리팩터링 내성을 지키기 위해 필요한 노력|낮음|중간|중간|
+    |유지비|낮음|중간|높음|
 
 ## ✅ 6.3 함수형 아키텍처 이해
 * **함수형 프로그래밍이란?**
